gitops/platform/edge/http-redirect-route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: public-http-redirect
  namespace: edge
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: public
      namespace: edge
      sectionName: http
  hostnames:
    - hiraya.noidilin.dev
    - "*.hiraya.noidilin.dev"
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
